# data2sparkfun

./: CMakeLists.txt  readme.md
node/: index.html  server.js
to_local/: CMakeLists.txt  local_async.cpp
to_public/: data2sparkfun.cpp
